Fix the icons for the app menu and the upgrade item in it when an update is available.

A regression was introduced in r581520 that caused the wrong icon and/or
the wrong coloring to be used in some circumstances. This CL fixes this
in two parts:

- AppMenuIconController may decide that the "annoyance level" from a
  pending update is too low to bother the user. One bug introduced in
  r581520 was that the controller still notified delegates that the
  UPGRADE_NOTIFICATION icon type should be used in this case. Now, the
  VERY_LOW annoyance level is ignore entirely for beta and stable
  channels.

- AppMenuModel no longer bases its decision to include the upgrade menu
  item directly on the UpgradeDetector. Rather, it now queries the
  AppMenuIconController. This ensures that the same logic is used for
  both the badging of the app menu and for the presence of the upgrade
  item in the menu.

BUG=898958

Change-Id: I4b761844365968a24bc69030d711122fcaf16e28
Reviewed-on: https://chromium-review.googlesource.com/c/1312475
Commit-Queue: Greg Thompson <grt@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606842}
Former-commit-id: a5a766d75a0eb8006212cb5cee94d704650c787b