chrome/browser/ui/toolbar/app_menu_icon_controller.h
@@ -6,6 +6,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef CHROME_BROWSER_UI_TOOLBAR_APP_MENU_ICON_CONTROLLER_H_
 #define CHROME_BROWSER_UI_TOOLBAR_APP_MENU_ICON_CONTROLLER_H_
 
+#include <stdint.h>
+
 #include "base/macros.h"
 #include "build/build_config.h"
 #include "chrome/browser/upgrade_detector/upgrade_observer.h"
@@ -15,6 +17,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "content/public/browser/notification_service.h"
 
 class Profile;
+class UpgradeDetector;
 
 // AppMenuIconController encapsulates the logic for badging the app menu icon
 // as a result of various events - such as available updates, errors, etc.
@@ -22,25 +25,30 @@ class AppMenuIconController :
     public content::NotificationObserver,
     public UpgradeObserver {
  public:
-  enum class IconType {
+  enum class IconType : uint32_t {
     NONE,
     UPGRADE_NOTIFICATION,
     GLOBAL_ERROR,
   };
-  enum class Severity {
+  enum class Severity : uint32_t {
     NONE,
     LOW,
     MEDIUM,
     HIGH,
   };
 
+  // The app menu icon's type and severity.
+  struct TypeAndSeverity {
+    IconType type;
+    Severity severity;
+  };
+
   // Delegate interface for receiving icon update notifications.
   class Delegate {
    public:
-    // Notifies the UI to update the icon to have the specified |severity|, as
-    // well as specifying whether it should |animate|. The |type| parameter
-    // specifies the type of change (i.e. the source of the notification).
-    virtual void UpdateSeverity(IconType type, Severity severity) = 0;
+    // Notifies the UI to update the icon to have the specified
+    // |type_and_severity|.
+    virtual void UpdateTypeAndSeverity(TypeAndSeverity type_and_severity) = 0;
 
    protected:
     virtual ~Delegate() {}
@@ -49,6 +57,9 @@ class AppMenuIconController :
   // Creates an instance of this class for the given |profile| that will notify
   // |delegate| of updates.
   AppMenuIconController(Profile* profile, Delegate* delegate);
+  AppMenuIconController(UpgradeDetector* upgrade_detector,
+                        Profile* profile,
+                        Delegate* delegate);
   ~AppMenuIconController() override;
 
   // Forces an update of the UI based on the current state of the world. This
@@ -56,6 +67,9 @@ class AppMenuIconController :
   // etc. and based on that information trigger an appropriate call to the
   // delegate.
   void UpdateDelegate();
+
+  // Returns the icon type and severity based on the current state.
+  TypeAndSeverity GetTypeAndSeverity() const;
 
  private:
   // content::NotificationObserver:
@@ -68,8 +82,9 @@ class AppMenuIconController :
 
   // True for desktop Chrome on dev and canary channels.
   const bool is_unstable_channel_;
-  Profile* profile_;
-  Delegate* delegate_;
+  UpgradeDetector* const upgrade_detector_;
+  Profile* const profile_;
+  Delegate* const delegate_;
   content::NotificationRegistrar registrar_;
 
   DISALLOW_COPY_AND_ASSIGN(AppMenuIconController);
